# SocketProgrammingPractice_pre

./: .gitignore  CMakeLists.txt  README.md
src/FT/: ft_client.c  ft_client.cpp  ft_client_with_name_resolution.c  ft_server.c  ft_server.cpp
src/SimpleTcp/: simple_tcp_client.c  simple_tcp_client.cpp  simple_tcp_client_with_name_resolution.c  simple_tcp_client_with_name_resolution.cpp  simple_tcp_server.c  simple_tcp_server.cpp
src/test/: getaddrinfo.c  getaddrinfo.cpp  perror.c  perror.cpp
